package pt.hotel.animais.model.enums;

public enum EstadoPagamento {
    LIQUIDADO,
    PENDENTE
}