package pt.hotel.animais.model.enums;

/**
 * Prioridade do plano de cuidados.
 */
public enum PrioridadePlano {
    ROTINA,      // Cuidados normais, sem urgência
    URGENTE,     // Cuidados que requerem atenção reforçada
    CRITICO      // Cuidados imediatos, estado de saúde crítico
}
