package pt.hotel.animais.model.enums;

/**
 * Resultado de um evento de auditoria.
 */
public enum ResultadoAuditoria {
    SUCESSO,
    FALHA
}
