%% Modelo de Domínio - Hotel de Animais

classDiagram
direction LR

class Tutor {
  nome
  nif
  contacto
  email
}

class Animal {
  nome
  especie
  raca
  dataNascimento
  peso
  estadoSaude
  cuidadosRecorrentes
}

class TipoAlojamentoTarifa {
  tipoAlojamento
  tarifaDiaria
  ativo
}

class Alojamento {
  identificacao
  tipo
  capacidade
  estadoLimpeza
}

class Reserva {
  dataInicio
  dataFim
  estado
  instrucoes
}

class Estadia {
  dataCheckIn
  dataCheckOut
  estado
}

class PlanoCuidados {
  instrucoes
  prioridade
  ativo
}

class TarefaCuidado {
  descricao
  periodicidade
  concluida
}

class RegistoCuidado {
  tipo
  observacoes
  dataHora
}

class Nota {
  texto
  dataHora
}

class TipoServicoExtra {
  nome
  descricao
  ativo
}

class ServicoExtra {
  descricao
  custo
  dataHora
}

class IntervencaoClinica {
  descricao
  prescricao
  custo
  dataHora
}

class AlteracaoEstadoSaude {
  descricao
  severidade
  dataHora
}

class Pagamento {
  valor
  metodo
  momento
  estado
  dataHora
}

class Colaborador {
  nome
  email
  perfil
}

class AuditoriaEvento {
  timestamp
  operacao
  entidade
  resultado
}

class Especie {
  <<enumeration>>
  CAO
  GATO
}

class EstadoSaude {
  <<enumeration>>
  NORMAL
  ALTERADO
  CRITICO
}

class EstadoLimpeza {
  <<enumeration>>
  PENDENTE
  CONCLUIDO
}

class EstadoReserva {
  <<enumeration>>
  ATIVA
  CONFIRMADA
  CANCELADA
  CONCLUIDA
}

class EstadoEstadia {
  <<enumeration>>
  EM_CURSO
  TERMINADA
}

class EstadoPagamento {
  <<enumeration>>
  LIQUIDADO
  PENDENTE
}

class MomentoPagamento {
  <<enumeration>>
  CHECK_IN
  CHECK_OUT
}

class MetodoPagamento {
  <<enumeration>>
  NUMERARIO
  CARTAO_DEBITO
  CARTAO_CREDITO
}

class PrioridadePlano {
  <<enumeration>>
  ROTINA
  URGENTE
  CRITICO
}

class PeriodicidadeTarefa {
  <<enumeration>>
  UNICA
  DIARIA
  SEMANAL
}

class TipoColaborador {
  <<enumeration>>
  DIRETOR
  FUNCIONARIO_RECEPCAO
  CUIDADOR
  MEDICO_VETERINARIO
  RESPONSAVEL_LIMPEZA
}

class ResultadoAuditoria {
  <<enumeration>>
  SUCESSO
  FALHA
}

Tutor "1" -- "0..*" Animal : responsavel por
Tutor "1" -- "0..*" Reserva : solicita
Animal "1" -- "0..*" Reserva : tem
TipoAlojamentoTarifa "1" -- "0..*" Alojamento : classifica
Alojamento "1" -- "0..*" Reserva : reservado em

Reserva "1" -- "0..1" Estadia : origina
Reserva "1" -- "0..*" Nota : contem

Animal "1" -- "0..*" PlanoCuidados : mantem
Estadia "1" -- "1" PlanoCuidados : ativa
PlanoCuidados "1" -- "0..*" TarefaCuidado : organiza
Estadia "1" -- "0..*" RegistoCuidado : regista
Estadia "1" -- "0..*" ServicoExtra : inclui
Estadia "1" -- "0..*" IntervencaoClinica : inclui
Estadia "1" -- "0..*" AlteracaoEstadoSaude : regista
Estadia "1" -- "0..*" Pagamento : gera

TipoServicoExtra "1" -- "0..*" ServicoExtra : tipifica

Colaborador "1" -- "0..*" Nota : escreve
Colaborador "1" -- "0..*" RegistoCuidado : regista
Colaborador "1" -- "0..*" ServicoExtra : regista
Colaborador "1" -- "0..*" IntervencaoClinica : regista
Colaborador "1" -- "0..*" AlteracaoEstadoSaude : regista
Colaborador "1" -- "0..*" AuditoriaEvento : origina

Animal ..> Especie : usa
Animal ..> EstadoSaude : usa
Alojamento ..> EstadoLimpeza : usa
Reserva ..> EstadoReserva : usa
Estadia ..> EstadoEstadia : usa
PlanoCuidados ..> PrioridadePlano : usa
TarefaCuidado ..> PeriodicidadeTarefa : usa
Pagamento ..> EstadoPagamento : usa
Pagamento ..> MomentoPagamento : usa
Pagamento ..> MetodoPagamento : usa
Colaborador ..> TipoColaborador : usa
AuditoriaEvento ..> ResultadoAuditoria : usa
